fix(Themes): Remove horizontal scrollbars from gray headers.

--- a/src/themes/nature/styles.css
+++ b/src/themes/nature/styles.css
@@ -88,7 +88,7 @@ h2:before {
 
   h2:before {
     z-index: -1;
-    right: -30px;
+    right: -16px;
   }
 }
 
